@@ -291,6 +291,12 @@ Trunk (unreleased changes)
     HDFS-1703. Run the namenodes and secondary namenodes on hosts
     returned by hdfs getconf (Erik Steffl)
 
+    HDFS-1871. Mapreduce build fails due to MiniDFSCluster change from
+    HDFS-1052. (suresh)
+
+    HDFS-1876. One MiniDFSCluster constructor ignores numDataNodes parameter
+    (todd)
+
 Release 0.22.0 - Unreleased
 
   NEW FEATURES
